ingress/deployment/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/rewrites: "serviceName=api rewrite=/"
spec:
  rules:
  - host: '*.environments.katacoda.com'
    http:
      paths:
      - path: /api/
        backend:
          serviceName: api
          servicePort: # TO DO
      - path: /redis/
        backend:
          serviceName: # TO DO
          servicePort: # TO DO
      - path: /
        backend:
          serviceName: # TO DO
          servicePort: # TO DO
